# DroneController

./: .gitignore  DroneController.ino  README.md  platformio.ini
internal/application/: flight_service.cpp  flight_service.h
internal/domain/: motor_output.cpp  motor_output.h
internal/infrastructure/: motor_driver.cpp  motor_driver.h  mpu_driver.cpp  mpu_driver.h  radio_driver.cpp
src/: main.cpp
src/internal/application/: flight_service.cpp  flight_service.h
src/internal/domain/: attitude.cpp  attitude.h  motor_output.cpp
src/internal/infrastructure/: motor_driver.cpp  motor_driver.h  mpu_driver.cpp  mpu_driver.h  radio_driver.cpp  radio_driver.h
test/: test_drone_command.cpp
tests/: CMakeLists.txt  README.md  build_tests.sh
tests/domain/: attitude_test.cpp  drone_command_test.cpp  motor_output_test.cpp
